http://bugzilla.gnome.org/show_bug.cgi?id=357735 Fix xover crash.